Fixing overflow

--- a/src/styles/screens/screen.less
+++ b/src/styles/screens/screen.less
@@ -12,7 +12,7 @@
   &:not(.form) {
     .screen-scroll-wrapper {
       height: calc(var(--appSize) - var(--screenFooterHeight));
-      overflow-y: auto;
+      overflow-y: scroll;
       overflow-x: hidden;
     }
 
